Trivial refactoring suggested by IDEA